Sources/sdk/sccio.h

typedef struct IOCOMPRESSFILEtag
{
    BASEIO                  sBaseIO;                /* Underlying IO system */
    HIOFILE                 hFile;                  /* Underlying IO system's handle to the file */
    VTDWORD                 dwType;                 /* Type of compression */
    VTDWORD                 dwFlags;                /* Info flags */
    VTHANDLE                hThis;                  /* Handle to this structure */
    VTHANDLE                hBuffer;                /* Handle to a cached buffer of decompressed data */
    VTBYTE *                pBuffer;                /* pointer to cached buffer of decompressed data */
    VTHANDLE                hData;                  /* Handle for data needed for decompression */
    VTBYTE *                pData;                  /* pointer to data needed for decompression */
    VTDWORD                 dwBufferStartPos;       /* Tell of current buffer start position */
    VTDWORD                 dwBufferSize;           /* size in bytes of valid buffer */
    HIOFILE                 hTempFile;              /* Temp file to store extra */
#ifdef SCCFEATURE_64BITIO
    VTOFF_T                 dwTempFileSize;         /* Current temp file size */
    VTOFF_T                 dwTempFilePos;          /* Current position in the current temp file of decompressed data */
    VTOFF_T                 dwCurFilePos;           /* Current absolute file position of decompressed data */
#else
    VTDWORD                 dwTempFileSize;         /* Current temp file size */
    VTDWORD                 dwTempFilePos;          /* Current position in the current temp file of decompressed data */
    VTDWORD                 dwCurFilePos;           /* Current absolute file position of decompressed data */
#endif
    VTBYTE                  LastByte;               /* keep the last byte read for easy bit reading */
    VTBYTE                  nBitsLeft;
    VTHANDLE                hReadBuffer;            /* handle to buffer for input */
    VTBYTE *                pReadBuffer;            /* pointer to buffer for input */
    VTDWORD                 dwReadBufferSize;       /* size of read buffer */
    VTDWORD                 dwReadBufferPos;        /* position in the read buffer */
    VTDWORD                 dwReadBufferFilePos;    /* position of start of read buffer in the file */
    VTBOOL                  bReadBufferEOF;         /* is the read buffer at EOF */
    VTDWORD                 dwReserved1;
    VTDWORD                 dwReserved2;
    VTDWORD                 dwReserved3;
    VTSYSVAL                pResPointer1;
} IOCOMPRESSFILE, * PIOCOMPRESSFILE;
typedef struct JBIG2_RegionSegmentInfo_tag
{
    VTDWORD dwXPos;
    VTDWORD dwYPos;
    VTDWORD dwWidth;
    VTDWORD dwHeight;
    VTDWORD dwByteWidth;
    VTBYTE  byFlags;
} JBIG2_RegionSegmentInfo, *PJBIG2_RegionSegmentInfo;
typedef struct JBIG2_Arithmetic_tag
{
    VTDWORD c;
    VTLONG  a;
    VTLONG  ct;
} JBIG2_Arithmetic, *PJBIG2_Arithmetic;
typedef struct JBIG2_Huffman_tag
{
	VTBYTE	byThisByte;
	VTSHORT BitOffset;
} JBIG2_Huffman, *PJBIG2_Huffman;
typedef struct JBIG2_HUFFMAN_LINEtag
{
	VTLONG RANGELOW;
	VTLONG PREFLEN;
	VTLONG RANGELEN;
	VTLONG PREFIX;
} JBIG2_HUFFMAN_LINE, * PJBIG2_HUFFMAN_LINE;
typedef struct JBIG2_HUFFMAN_TABLEtag
{
	VTBOOL HTOOB;
	VTLONG nLines;
	const JBIG2_HUFFMAN_LINE * Lines;
}JBIG2_HUFFMAN_TABLE, *PJBIG2_HUFFMAN_TABLE;
typedef struct JBIG2_HUFFMAN_NODE_tag JBIG2_HUFFMAN_NODE;
typedef struct JBIG2_HUFFMAN_NODE_tag * PJBIG2_HUFFMAN_NODE;
struct JBIG2_HUFFMAN_NODE_tag
{
	VTLONG Index;
	PJBIG2_HUFFMAN_NODE ONE;
	PJBIG2_HUFFMAN_NODE ZERO;
};
typedef struct JBIG2_Bitmap_tag
{
	VTDWORD dwImageWidth;
	VTDWORD dwImageHeight;
	VTDWORD dwRowStride; /*Number of Bytes in Row */
	VTDWORD dwRefCount; /* number of references to this image */
	VTLPBYTE	Image;  /* Uncompressed Image Data of size (dwRowStride*dwImageHeight)*/
} JBIG2_Bitmap, *PJBIG2_Bitmap;
typedef struct JBIG2_SymbolDictionary_tag
{
	VTDWORD	dwSymCount;
	PJBIG2_Bitmap * Symbols;
}JBIG2_SymbolDictionary, *PJBIG2_SymbolDictionary;
typedef struct JBIG2_SymbolSettings_tag
{
    VTBOOL					bHuff;
	VTBOOL					bRefAgg;
	PJBIG2_SymbolDictionary	pSDInSyms;			/*Symbol distionary that is used as an input to this symbol dictionary. It contains dwNumInSyms symbols */

	VTDWORD					dwNumExSyms;		/*The number of symbols to be defined in this symbol dictionary */
    VTDWORD					dwNumNewSyms;		/*The number of symbols to be exported from this symbol dictionary */
    
	PJBIG2_HUFFMAN_TABLE	SDHUFFDH;
	PJBIG2_HUFFMAN_NODE		TreeSDHUFFDH;
	PJBIG2_HUFFMAN_TABLE	SDHUFFDW;
	PJBIG2_HUFFMAN_NODE		TreeSDHUFFDW;
	PJBIG2_HUFFMAN_TABLE	SDHUFFBMSIZE;
	PJBIG2_HUFFMAN_NODE		TreeSDHUFFBMSIZE;
	PJBIG2_HUFFMAN_TABLE	SDHUFFAGGINST;
	PJBIG2_HUFFMAN_NODE		TreeSDHUFFAGGINST;

	VTBYTE					byTemplate;
    VTCHAR					chSYMAT[4][2];      /* these are signed bytes, *not* text data. Do not make them TCHARs! */
    
    VTBYTE					byRefTemplate;      
    VTCHAR					chSYMATRef[4];   /*More signed bytes. Don't make TCHARs */

	VTBOOL					bBMPCodingUsed;
    VTBOOL					bBMPCodingKept;
    VTDWORD					dwNumProcessedSyms;
} JBIG2_SymbolSettings, *PJBIG2_SymbolSettings;
typedef struct JBIG2_GenericSettings_tag
{
    VTBOOL  bMMR;
    VTBOOL  bTPGDON;
    VTBYTE  byGBT;
	VTDWORD dwHeight;
	VTDWORD dwWidth;
    VTCHAR  chGBAT[4][2]; /* these are signed bytes, *not* text data. Do not make them TCHARs! */
} JBIG2_GenericSettings, *PJBIG2_GenericSettings;
typedef struct JBIG2_TextSettings_tag
{
    VTBOOL  bHuff;
    VTBOOL  bRefine;
	VTBYTE  byLogSBStrips;
    VTBYTE  byStrips;
    VTBYTE  byRefCorner;
    VTBOOL  bTransposed;
    VTBYTE  byComboOp;
    VTBOOL  bDefPix;
    VTCHAR  DeltaSOffset; /* bug9056767: Changing from VTBYTE to VTSHORT because it is a signed value -zf 04/12/10 */
    VTBOOL  bRefTemp;
	
	VTWORD  wHuffFlags;
	PJBIG2_HUFFMAN_TABLE SDHUFFFS;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFFS;
	PJBIG2_HUFFMAN_TABLE SDHUFFDS;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFDS;
	PJBIG2_HUFFMAN_TABLE SDHUFFDT;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFDT;
	PJBIG2_HUFFMAN_TABLE SDHUFFRDW;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFRDW;
	PJBIG2_HUFFMAN_TABLE SDHUFFRDH;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFRDH;
	PJBIG2_HUFFMAN_TABLE SDHUFFRDX;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFRDX;
	PJBIG2_HUFFMAN_TABLE SDHUFFRDY;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFRDY;
	PJBIG2_HUFFMAN_TABLE SDHUFFRSIZE;
	PJBIG2_HUFFMAN_NODE TreeSDHUFFRSIZE;

	VTCHAR		SBRAT[4]; /* Refinement AT flags */
    VTDWORD dwNumInstances;
    VTDWORD dwNumProcessedInstances;
} JBIG2_TextSettings, *PJBIG2_TextSettings;
typedef struct JBIG2_BitmapHeader_tag
{
    VTDWORD dwWidth;
    VTDWORD dwHeight;
} JBIG2_BitmapHeader, *PJBIG2_BitmapHeader;
typedef struct JBIG2_TextInstance_tag
{
    VTLONG lS;
    VTLONG lT;
    VTLONG lID;
	VTBOOL bRefine;			/* indicates if the symbol is refined */
	PJBIG2_Bitmap Symbol;
} JBIG2_TextInstance, *PJBIG2_TextInstance;
typedef struct JBIG2_RefinementSettings_tag
{
	VTDWORD		dwGRW;
	VTDWORD		dwGRH;
	VTBYTE		byGRTemplate;
	PJBIG2_Bitmap pRefImage;
	VTLONG		lRDX;
	VTLONG		lRDY;
	VTCHAR		GRAT[4];
}JBIG2_RefinementSettings, *PJBIG2_RefinementSettings;
typedef struct IOJBIG2DATAtag
{
    JBIG2_Arithmetic        ArithState;
	JBIG2_Huffman			HuffmanState;
    JBIG2_RegionSegmentInfo SegInfo;
    JBIG2_GenericSettings   GenericSettings;
    JBIG2_SymbolSettings    SymbolSettings;
    JBIG2_TextSettings      TextSettings;

    VTHANDLE                hArithmeticContext;
    VTLPBYTE                pArithmeticContext;

    VTHANDLE                hIADHContext;
    VTLPBYTE                pIADHContext;
    VTHANDLE                hIADWContext;
    VTLPBYTE                pIADWContext;
    VTHANDLE                hIAEXContext;
    VTLPBYTE                pIAEXContext;
	VTHANDLE                hIAAIContext;
    VTLPBYTE                pIAAIContext;

    VTHANDLE                hIADTContext;
    VTLPBYTE                pIADTContext;
    VTHANDLE                hIAFSContext;
    VTLPBYTE                pIAFSContext;
    VTHANDLE                hIADSContext;
    VTLPBYTE                pIADSContext;
    VTHANDLE                hIAITContext;
    VTLPBYTE                pIAITContext;
    VTHANDLE                hIAIDContext;
    VTLPBYTE                pIAIDContext;
	VTHANDLE                hIARDXContext;
    VTLPBYTE                pIARDXContext;
	VTHANDLE                hIARDYContext;
    VTLPBYTE                pIARDYContext;
	VTHANDLE                hIARDHContext;
    VTLPBYTE                pIARDHContext;
	VTHANDLE                hIARDWContext;
    VTLPBYTE                pIARDWContext;
	VTHANDLE                hIARIContext;
    VTLPBYTE                pIARIContext;
} IOJBIG2DATA, *PIOJBIG2DATA;
/*********************************************************************/
/*********************************************************************/
/*********************                         ***********************/
/*********************           LZX           ***********************/
/*********************                         ***********************/
/*********************************************************************/
/*********************************************************************/

/* spec says max # of slots is 42, but others have disagreed */
#define LZX_MAX_SLOTS           50
#define LZX_NUM_CHARS           256
/* constants for building main tree lookup table */
#define LZX_MAIN_TREE_ELEMS     (LZX_NUM_CHARS+LZX_MAX_SLOTS*8)
#define LZX_MAIN_LOOKUP_BITS    12
#define LZX_MAIN_LOOKUP_SIZE    ((1<<LZX_MAIN_LOOKUP_BITS) + 2*LZX_MAIN_TREE_ELEMS)
/* constants for building length tree lookup table */
#define LZX_LENGTH_TREE_ELEMS   249
#define LZX_LENGTH_LOOKUP_BITS  12
#define LZX_LENGTH_LOOKUP_SIZE  ((1<<LZX_LENGTH_LOOKUP_BITS) + 2*LZX_LENGTH_TREE_ELEMS)
/* constants for building align tree lookup table */
#define LZX_ALIGN_TREE_ELEMS    8
#define LZX_ALIGN_LOOKUP_BITS   7
#define LZX_ALIGN_LOOKUP_SIZE   ((1<<LZX_ALIGN_LOOKUP_BITS) + 2*LZX_ALIGN_TREE_ELEMS)
typedef struct IOLZXDATAtag
{
    VTBOOL      bEOF;

    VTWORD      wBitBuf;            /* stores most significant bit first */
    VTWORD      wBitsLeft;          /* # bits in wBitBuf left to read */

    VTDWORD     dwBytesRead;        /* total # of uncompressed bytes read */

    /* window size is already stored in IOCOMPRESSFILE.dwReserved1 */
    VTWORD      wPositionSlots;     /* # of window subdivisions/slots */
    VTDWORD     dwTransSize;        /* 0xe8 opcode translation size */
    VTBYTE      ubBlockType;

    VTWORD      MainData[LZX_MAIN_TREE_ELEMS];      /* Main tree lengths */
    VTWORD      LengthData[LZX_LENGTH_TREE_ELEMS];  /* Length tree lengths */
    VTWORD      AlignData[LZX_ALIGN_TREE_ELEMS];    /* Align tree lengths */

    /* lookup arrays for determining huffman code values */
    VTWORD      MainLookup[LZX_MAIN_LOOKUP_SIZE];
    VTWORD      LengthLookup[LZX_LENGTH_LOOKUP_SIZE];
    VTWORD      AlignLookup[LZX_ALIGN_LOOKUP_SIZE];

    VTHANDLE    hWindow;            /* handle to memory in pWindow */
    VTBYTE*     pWindow;            /* sliding window array */
    VTDWORD     dwWindowLoc;        /* current location in pWindow */
    VTDWORD     dwDecodeLoc;        /* location needing 0xe8 decoding */

    VTDWORD     RecentOffsets[3];   /* R# values as described in lzx spec */
} IOLZXDATA, *PIOLZXDATA;
/*********************************************************************/
/*********************************************************************/
 /*
  |   Macros
  */
#define IOOpenVia(a,b,c,d,e) ((PBASEIO)(a))->pOpen(b,c,d,e)
#define IOClose(a)           ((PBASEIO)(a))->pClose(a)
#define IORead(a,b,c,d)      ((PBASEIO)(a))->pRead(a,(VTBYTE *)b,c,d)
#define IOWrite(a,b,c,d)     ((PBASEIO)(a))->pWrite(a,(VTBYTE *)b,c,d)
#define IOSeek(a,b,c)        ((PBASEIO)(a))->pSeek(a,b,c)
#define IOTell(a,b)          ((PBASEIO)(a))->pTell(a,b)
#define IOGetInfo(a,b,c)     ((PBASEIO)(a))->pGetInfo(a,b,c)
#define IOSeek64(a,b,c)      ((PBASEIO)(a))->pSeek64(a,b,c)