Sources/sccio.pas


     PJBIG2_Arithmetic = ^JBIG2_Arithmetic;
     JBIG2_Arithmetic = record
          c : VTDWORD;
          a : VTLONG;
          ct : VTLONG;
       end;
     PPJBIG2_Arithmetic = ^PJBIG2_Arithmetic;

     PJBIG2_Huffman = ^JBIG2_Huffman;
     JBIG2_Huffman = record
          byThisByte : VTBYTE;
          BitOffset : VTSHORT;
       end;
     PPJBIG2_Huffman = ^PJBIG2_Huffman;

     PJBIG2_HUFFMAN_LINE = ^JBIG2_HUFFMAN_LINE;
     JBIG2_HUFFMAN_LINE = record
          RANGELOW : VTLONG;
          PREFLEN : VTLONG;
          RANGELEN : VTLONG;
          PREFIX : VTLONG;
       end;
     PPJBIG2_HUFFMAN_LINE = ^PJBIG2_HUFFMAN_LINE;
(* Const before type ignored *)

     PJBIG2_HUFFMAN_TABLE = ^JBIG2_HUFFMAN_TABLE;
     JBIG2_HUFFMAN_TABLE = record
          HTOOB : VTBOOL;
          nLines : VTLONG;
          Lines : PJBIG2_HUFFMAN_LINE;
       end;
     PPJBIG2_HUFFMAN_TABLE = ^PJBIG2_HUFFMAN_TABLE;

     PJBIG2_HUFFMAN_NODE = ^JBIG2_HUFFMAN_NODE;
     JBIG2_HUFFMAN_NODE = record
          Index : VTLONG;
          ONE : PJBIG2_HUFFMAN_NODE;
          ZERO : PJBIG2_HUFFMAN_NODE;
       end;
     PPJBIG2_HUFFMAN_NODE = ^PJBIG2_HUFFMAN_NODE;

  {Number of Bytes in Row  }
  { number of references to this image  }
  { Uncompressed Image Data of size (dwRowStride*dwImageHeight) }

     PJBIG2_Bitmap = ^JBIG2_Bitmap;
     JBIG2_Bitmap = record
          dwImageWidth : VTDWORD;
          dwImageHeight : VTDWORD;
          dwRowStride : VTDWORD;
          dwRefCount : VTDWORD;
          Image : VTLPBYTE;
       end;
     PPJBIG2_Bitmap = ^PJBIG2_Bitmap;

     PJBIG2_SymbolDictionary = ^JBIG2_SymbolDictionary;
     JBIG2_SymbolDictionary = record
          dwSymCount : VTDWORD;
          Symbols : PPJBIG2_Bitmap;
       end;
     PPJBIG2_SymbolDictionary = ^PJBIG2_SymbolDictionary;
  {Symbol distionary that is used as an input to this symbol dictionary. It contains dwNumInSyms symbols  }
  {The number of symbols to be defined in this symbol dictionary  }
  {The number of symbols to be exported from this symbol dictionary  }
  { these are signed bytes, *not* text data. Do not make them TCHARs!  }
  {More signed bytes. Don't make TCHARs  }

     PJBIG2_SymbolSettings = ^JBIG2_SymbolSettings;
     JBIG2_SymbolSettings = record
          bHuff : VTBOOL;
          bRefAgg : VTBOOL;
          pSDInSyms : PJBIG2_SymbolDictionary;
          dwNumExSyms : VTDWORD;
          dwNumNewSyms : VTDWORD;
          SDHUFFDH : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFDH : PJBIG2_HUFFMAN_NODE;
          SDHUFFDW : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFDW : PJBIG2_HUFFMAN_NODE;
          SDHUFFBMSIZE : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFBMSIZE : PJBIG2_HUFFMAN_NODE;
          SDHUFFAGGINST : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFAGGINST : PJBIG2_HUFFMAN_NODE;
          byTemplate : VTBYTE;
          chSYMAT : array[0..3] of array[0..1] of VTCHAR;
          byRefTemplate : VTBYTE;
          chSYMATRef : array[0..3] of VTCHAR;
          bBMPCodingUsed : VTBOOL;
          bBMPCodingKept : VTBOOL;
          dwNumProcessedSyms : VTDWORD;
       end;
     PPJBIG2_SymbolSettings = ^PJBIG2_SymbolSettings;
  { these are signed bytes, *not* text data. Do not make them TCHARs!  }

     PJBIG2_GenericSettings = ^JBIG2_GenericSettings;
     JBIG2_GenericSettings = record
          bMMR : VTBOOL;
          bTPGDON : VTBOOL;
          byGBT : VTBYTE;
          dwHeight : VTDWORD;
          dwWidth : VTDWORD;
          chGBAT : array[0..3] of array[0..1] of VTCHAR;
       end;
     PPJBIG2_GenericSettings = ^PJBIG2_GenericSettings;
  { bug9056767: Changing from VTBYTE to VTSHORT because it is a signed value -zf 04/12/10  }
  { Refinement AT flags  }

     PJBIG2_TextSettings = ^JBIG2_TextSettings;
     JBIG2_TextSettings = record
          bHuff : VTBOOL;
          bRefine : VTBOOL;
          byLogSBStrips : VTBYTE;
          byStrips : VTBYTE;
          byRefCorner : VTBYTE;
          bTransposed : VTBOOL;
          byComboOp : VTBYTE;
          bDefPix : VTBOOL;
          DeltaSOffset : VTCHAR;
          bRefTemp : VTBOOL;
          wHuffFlags : VTWORD;
          SDHUFFFS : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFFS : PJBIG2_HUFFMAN_NODE;
          SDHUFFDS : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFDS : PJBIG2_HUFFMAN_NODE;
          SDHUFFDT : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFDT : PJBIG2_HUFFMAN_NODE;
          SDHUFFRDW : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFRDW : PJBIG2_HUFFMAN_NODE;
          SDHUFFRDH : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFRDH : PJBIG2_HUFFMAN_NODE;
          SDHUFFRDX : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFRDX : PJBIG2_HUFFMAN_NODE;
          SDHUFFRDY : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFRDY : PJBIG2_HUFFMAN_NODE;
          SDHUFFRSIZE : PJBIG2_HUFFMAN_TABLE;
          TreeSDHUFFRSIZE : PJBIG2_HUFFMAN_NODE;
          SBRAT : array[0..3] of VTCHAR;
          dwNumInstances : VTDWORD;
          dwNumProcessedInstances : VTDWORD;
       end;
     PPJBIG2_TextSettings = ^PJBIG2_TextSettings;

     PJBIG2_BitmapHeader = ^JBIG2_BitmapHeader;
     JBIG2_BitmapHeader = record
          dwWidth : VTDWORD;
          dwHeight : VTDWORD;
       end;
     PPJBIG2_BitmapHeader = ^PJBIG2_BitmapHeader;
  { indicates if the symbol is refined  }

     PJBIG2_TextInstance = ^JBIG2_TextInstance;
     JBIG2_TextInstance = record
          lS : VTLONG;
          lT : VTLONG;
          lID : VTLONG;
          bRefine : VTBOOL;
          Symbol : PJBIG2_Bitmap;
       end;
     PPJBIG2_TextInstance = ^PJBIG2_TextInstance;

     PJBIG2_RefinementSettings = ^JBIG2_RefinementSettings;
     JBIG2_RefinementSettings = record
          dwGRW : VTDWORD;
          dwGRH : VTDWORD;
          byGRTemplate : VTBYTE;
          pRefImage : PJBIG2_Bitmap;
          lRDX : VTLONG;
          lRDY : VTLONG;
          GRAT : array[0..3] of VTCHAR;
       end;
     PPJBIG2_RefinementSettings = ^PJBIG2_RefinementSettings;

     PIOJBIG2DATA = ^IOJBIG2DATA;
     IOJBIG2DATA = record
          ArithState : JBIG2_Arithmetic;
          HuffmanState : JBIG2_Huffman;
          SegInfo : JBIG2_RegionSegmentInfo;
          GenericSettings : JBIG2_GenericSettings;
          SymbolSettings : JBIG2_SymbolSettings;
          TextSettings : JBIG2_TextSettings;
          hArithmeticContext : VTHANDLE;
          pArithmeticContext : VTLPBYTE;
          hIADHContext : VTHANDLE;
          pIADHContext : VTLPBYTE;
          hIADWContext : VTHANDLE;
          pIADWContext : VTLPBYTE;
          hIAEXContext : VTHANDLE;
          pIAEXContext : VTLPBYTE;
          hIAAIContext : VTHANDLE;
          pIAAIContext : VTLPBYTE;
          hIADTContext : VTHANDLE;
          pIADTContext : VTLPBYTE;
          hIAFSContext : VTHANDLE;
          pIAFSContext : VTLPBYTE;
          hIADSContext : VTHANDLE;
          pIADSContext : VTLPBYTE;
          hIAITContext : VTHANDLE;
          pIAITContext : VTLPBYTE;
          hIAIDContext : VTHANDLE;
          pIAIDContext : VTLPBYTE;
          hIARDXContext : VTHANDLE;
          pIARDXContext : VTLPBYTE;
          hIARDYContext : VTHANDLE;
          pIARDYContext : VTLPBYTE;
          hIARDHContext : VTHANDLE;
          pIARDHContext : VTLPBYTE;
          hIARDWContext : VTHANDLE;
          pIARDWContext : VTLPBYTE;
          hIARIContext : VTHANDLE;
          pIARIContext : VTLPBYTE;
       end;
     PPIOJBIG2DATA = ^PIOJBIG2DATA;
  {******************************************************************* }
  {******************************************************************* }
  {********************                         ********************** }
  {********************           LZX           ********************** }
  {********************                         ********************** }
  {******************************************************************* }
  {******************************************************************* }
  { spec says max # of slots is 42, but others have disagreed  }

  const
     LZX_MAX_SLOTS = 50;
     LZX_NUM_CHARS = 256;
  { constants for building main tree lookup table  }
     LZX_MAIN_TREE_ELEMS = LZX_NUM_CHARS+(LZX_MAX_SLOTS*8);
     LZX_MAIN_LOOKUP_BITS = 12;
     LZX_MAIN_LOOKUP_SIZE = (1 shl LZX_MAIN_LOOKUP_BITS)+(2*LZX_MAIN_TREE_ELEMS);
  { constants for building length tree lookup table  }
     LZX_LENGTH_TREE_ELEMS = 249;
     LZX_LENGTH_LOOKUP_BITS = 12;
     LZX_LENGTH_LOOKUP_SIZE = (1 shl LZX_LENGTH_LOOKUP_BITS)+(2*LZX_LENGTH_TREE_ELEMS);
  { constants for building align tree lookup table  }
     LZX_ALIGN_TREE_ELEMS = 8;
     LZX_ALIGN_LOOKUP_BITS = 7;
     LZX_ALIGN_LOOKUP_SIZE = (1 shl LZX_ALIGN_LOOKUP_BITS)+(2*LZX_ALIGN_TREE_ELEMS);
  { stores most significant bit first  }
  { # bits in wBitBuf left to read  }
  { total # of uncompressed bytes read  }
  { window size is already stored in IOCOMPRESSFILE.dwReserved1  }
  { # of window subdivisions/slots  }
  { 0xe8 opcode translation size  }
  { Main tree lengths  }
  { Length tree lengths  }
  { Align tree lengths  }
  { lookup arrays for determining huffman code values  }
  { handle to memory in pWindow  }
  { sliding window array  }
  { current location in pWindow  }
  { location needing 0xe8 decoding  }
  { R# values as described in lzx spec  }

  type

     PIOLZXDATA = ^IOLZXDATA;
     IOLZXDATA = record
          bEOF : VTBOOL;
          wBitBuf : VTWORD;
          wBitsLeft : VTWORD;
          dwBytesRead : VTDWORD;
          wPositionSlots : VTWORD;
          dwTransSize : VTDWORD;
          ubBlockType : VTBYTE;
          MainData : array[0..(LZX_MAIN_TREE_ELEMS)-1] of VTWORD;
          LengthData : array[0..(LZX_LENGTH_TREE_ELEMS)-1] of VTWORD;
          AlignData : array[0..(LZX_ALIGN_TREE_ELEMS)-1] of VTWORD;
          MainLookup : array[0..(LZX_MAIN_LOOKUP_SIZE)-1] of VTWORD;
          LengthLookup : array[0..(LZX_LENGTH_LOOKUP_SIZE)-1] of VTWORD;
          AlignLookup : array[0..(LZX_ALIGN_LOOKUP_SIZE)-1] of VTWORD;
          hWindow : VTHANDLE;
          pWindow : PVTBYTE;
          dwWindowLoc : VTDWORD;
          dwDecodeLoc : VTDWORD;
          RecentOffsets : array[0..2] of VTDWORD;
       end;
     PPIOLZXDATA = ^PIOLZXDATA;
  {******************************************************************* }
  {******************************************************************* }
//  {
//    |   Macros
//     }
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOOpenVia(a,b,c,d,e : longint) : longint;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOClose(a : longint) : longint;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IORead(a,b,c,d : longint) : longint;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOWrite(a,b,c,d : longint) : longint;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOSeek(a,b,c : longint) : longint;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOTell(a,b : longint) : longint;
//
//  { was #define dname(params) para_def_expr }
//  { argument types are unknown }
//  { return type might be wrong }
//  function IOGetInfo(a: PBASEIO; b,c : longint) : longint;

{$ifdef SCCFEATURE_64BITIO}
  { was #define dname(params) para_def_expr }
  { argument types are unknown }
  { return type might be wrong }   
  function IOSeek64(a,b,c : longint) : longint;  
